--- a/safe/src/main/resources/templates/index.html
+++ b/safe/src/main/resources/templates/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 <h1>公共页面</h1>
+<form th:action="@{/logout}" method="post">
+<input type="submit" value="登出"/>
+</form>
 <p>点击 <a th:href="@{/content}">这里</a> 进入受限页面</p>
 <p>点击 <a th:href="@{/admin}">这里</a> 进入 Admin 页面</p>
 </body>
