--- a/friday/demo/src/main/resources/templates/user/user-list.html
+++ b/friday/demo/src/main/resources/templates/user/user-list.html
@@ -17,15 +17,22 @@
           <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right" onclick="location.reload()" title="刷新">
             <i class="layui-icon layui-icon-refresh" style="line-height:30px"></i></a>
         </div>
-        <div class="layui-fluid">
-            <div class="layui-row layui-col-space15">
-                <div class="layui-col-md12">
-                    <div class="layui-card">
-                        <table id="demo" lay-filter="test"></table>
-                    </div>
-                </div>
+
+        <script type="text/html" id="toolbarDemo">
+            <div class="layui-btn-container">
+                <button class="layui-btn layui-btn-sm" lay-event="getCheckData">获取选中行数据</button>
+                <button class="layui-btn layui-btn-sm" lay-event="getCheckLength">获取选中数目</button>
+                <button class="layui-btn layui-btn-sm" lay-event="isAll">验证是否全选</button>
             </div>
-        </div> 
+        </script>
+        <table class="layui-hide" id="demo" lay-filter="member"></table>
+
+        <script type="text/html" id="barDemo">
+            <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+            <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+        </script>
+
+
     </body>
 <script>
     layui.use('table', function(){
@@ -34,8 +41,10 @@
         //第一个实例
         table.render({
             elem: '#demo'
-            ,height: 312
+            // ,height: 312
             ,url: '/user/list' //数据接口
+            ,toolbar: '#toolbarDemo' //开启头部工具栏，并为其绑定左侧模板
+            ,page: true //开启分页
             ,response: {
                 dataName: 'datas' //规定数据列表的字段名称，默认：data
             }
@@ -43,9 +52,9 @@
                 [ //表头
                     {type: 'checkbox', fixed: 'left'}
                     ,{field: 'id', title: 'ID', align:'center', width:50}
-                    ,{field: 'username', title: '用户名'}
-                    ,{field: 'telephone', title: '手机'}
-                    ,{field: 'status', title: '状态',  templet:function(d){
+                    ,{field: 'username', title: '用户名',width:100}
+                    ,{field: 'telephone', title: '手机',width:200}
+                    ,{field: 'status', title: '状态' ,width:100, templet:function(d){
                         return  d.status == '1' ? "启动":"禁用";
                     }}
                     ,{field: 'birthday', title: '生日'}
