--- a/friday/demo/src/main/resources/templates/user/user-add.html
+++ b/friday/demo/src/main/resources/templates/user/user-add.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html class="x-admin-sm" xmlns:th="http://www.thymeleaf.org">
-    
-    <head>
-        <meta charset="UTF-8">
-        <title>新增用户</title>
-        <header th:replace="header::html"></header>
-    </head>
-    <body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>新增用户信息</title>
+    <header th:replace="header::html"></header>
+</head>
+
+<body>
+<div class="x-body">
     <form class="layui-form">
 
         <div class="layui-form-item">
@@ -69,7 +71,7 @@
         <div class="layui-form-item">
             <label for="L_email" class="layui-form-label">生日</label>
             <div class="layui-input-inline">
-                <input type="text" id="L_birthday"  th:value="${sysUser.birthday}" name='birthday' placeholder="yyyy-MM-dd" class="layui-input ">
+                <input type="text" id="L_birthday"  th:value="${sysUser.birthday}" name='birthday' placeholder="yyyy-MM-dd" class="layui-input "  autocomplete="off" >
             </div>
         </div>
         <div class="layui-form-item">
@@ -93,93 +95,90 @@
             </button>
         </div>
     </form>
-        <script>
-            layui.use(['form','layer', 'laydate'], function(){
-            $ = layui.jquery;
-            var form = layui.form
-                ,layer = layui.layer
-                ,laydate = layui.laydate;
+</div>
+<script>
 
-            getAllRole(function(){
-                layui.form.render('radio')
-            });
-            //日期
-            laydate.render({
-                elem: '#L_birthday'
-                ,format: 'yyyy-MM-dd' //可任意组合
-            });
+    layui.use(['form','layer', 'laydate'], function(){
+        $ = layui.jquery;
+        var form = layui.form
+            ,layer = layui.layer
+            ,laydate = layui.laydate;
+        getAllRole(function(){
+            layui.form.render('radio')
+        });
+        //日期
+        laydate.render({
+            elem: '#L_birthday'
+            ,theme: 'molv'
+            ,format: 'yyyy-MM-dd' //可任意组合
+            ,trigger: 'click'//呼出事件改成click
+        });
 
-
-
-                //自定义验证规则
-                form.verify({
-                    nikename: function(value){
-                        if(value.length < 5){
-                            return '昵称至少得5个字符啊';
-                        }
-                    }
-                    ,telephone: [/(.+){6,12}$/, '电话号码必须6到12位']
-                    ,pass: [/(.+){6,12}$/, '密码必须6到12位']
-                    ,repass: function(value){
-                        if($('#L_pass').val()!=$('#L_repass').val()){
-                            return '两次密码不一致';
-                        }
-                    }
-                });
-
-                //监听提交
-                form.on('submit(add)', function(data){
-                    var rolelRadio = $("[name=roleId]:checked");
-                    if(rolelRadio == undefined || rolelRadio.length <= 0){
-                        layer.alert("请给该用户设置角色");
-                        return false;
-                    }
-                    data.field.roleId = rolelRadio.val();
-                    $.ajax({
-                        url:"/user/add",
-                        type:"POST",
-                        data:data.field,
-                        dataType:'json',
-                        success:function(result){
-                            if(result.code == 500 || result.code == 5000100 || result.code == 5000101 || result.code == 5000102){
-                                layer.alert(result.msg);
-                            }else{
-                                layer.alert("设置成功", {icon: 6},function () {
-                                    //关闭当前frame
-                                    xadmin.close();
-                                    // 可以对父窗口进行刷新
-                                    xadmin.father_reload();
-                                });
-                            }
-                        }
-                    });
-                    return false;
-                }); });
-            function getAllRole(callback){
-                $.ajax({
-                    url:"/role/all",
-                    type:"GET",
-                    dataType:'json',
-                    success:function(result){
-                        var html = "";
-                        if(result.datas && result.datas.length > 0){
-                            for(i in result.datas ){
-                                html += '<input type="radio"  name="roleId" value="'+result.datas[i].id+'" title="'+result.datas[i].name+'" >' +
-                                    '<div class="layui-unselect layui-form-radio layui-form-radioed"><i class="layui-anim layui-icon"></i><div>'+result.datas[i].name+'</div></div>';
-                            }
-                            $(".show-role-container").html(html);
-                            callback();
-                        }
-                    }
-                });
+        //自定义验证规则
+        form.verify({
+            nikename: function(value){
+                if(value.length < 5){
+                    return '昵称至少得5个字符啊';
+                }
             }
-        </script>
-        <script>var _hmt = _hmt || []; (function() {
-                var hm = document.createElement("script");
-                hm.src = "https://hm.baidu.com/hm.js?b393d153aeb26b46e9431fabaf0f6190";
-                var s = document.getElementsByTagName("script")[0];
-                s.parentNode.insertBefore(hm, s);
-            })();</script>
-    </body>
+            ,telephone: [/(.+){6,12}$/, '电话号码必须6到12位']
+            ,pass: [/(.+){6,12}$/, '密码必须6到12位']
+            ,repass: function(value){
+                if($('#L_pass').val()!=$('#L_repass').val()){
+                    return '两次密码不一致';
+                }
+            }
+        });
 
+        //监听提交
+        form.on('submit(add)', function(data){
+            var rolelRadio = $("[name=roleId]:checked");
+            if(rolelRadio == undefined || rolelRadio.length <= 0){
+                layer.alert("请给该用户设置角色");
+                return false;
+            }
+            data.field.roleId = rolelRadio.val();
+            $.ajax({
+                url:"/user/add",
+                type:"POST",
+                data:data.field,
+                dataType:'json',
+                success:function(result){
+                    if(result.code == 500 || result.code == 5000100 || result.code == 5000101 || result.code == 5000102){
+                        layer.alert(result.msg);
+                    }else{
+                        layer.alert("设置成功", {icon: 6},function () {
+                            //关闭当前frame
+                            xadmin.close();
+                            // 可以对父窗口进行刷新
+                            xadmin.father_reload();
+                        });
+                    }
+                }
+            });
+            return false;
+        });
+
+
+    });
+    function getAllRole(callback){
+        $.ajax({
+            url:"/role/all",
+            type:"GET",
+            dataType:'json',
+            success:function(result){
+                var html = "";
+                if(result.datas && result.datas.length > 0){
+                    for(i in result.datas ){
+                        html += '<input type="radio"  name="roleId" value="'+result.datas[i].id+'" title="'+result.datas[i].name+'" >' +
+                            '<div class="layui-unselect layui-form-radio layui-form-radioed"><i class="layui-anim layui-icon"></i><div>'+result.datas[i].name+'</div></div>';
+                    }
+                    $(".show-role-container").html(html);
+                    callback();
+                }
+            }
+        });
+    }
+</script>
+</body>
 </html>
