--- a/friday/demo/src/main/resources/templates/index.html
+++ b/friday/demo/src/main/resources/templates/index.html
@@ -19,13 +19,13 @@
             <dl class="layui-nav-child">
                 <!-- 二级菜单 -->
                 <dd>
-                    <a onclick="xadmin.open('最大化','http://www.baidu.com','','',true)">
+                    <a onclick="xadmin.open('最大化','http://www.baidu.com')">
                         <i class="iconfont">&#xe6a2;</i>弹出最大化</a></dd>
                 <dd>
                     <a onclick="xadmin.open('弹出自动宽高','http://www.baidu.com')">
                         <i class="iconfont">&#xe6a8;</i>弹出自动宽高</a></dd>
                 <dd>
-                    <a onclick="xadmin.open('弹出指定宽高','http://www.baidu.com',500,300)">
+                    <a onclick="xadmin.open('弹出指定宽高','http://www.baidu.com')">
                         <i class="iconfont">&#xe6a8;</i>弹出指定宽高</a></dd>
                 <dd>
                     <a onclick="xadmin.add_tab('在tab打开','member-list.html')">
