--- a/friday/demo/src/main/resources/templates/user/user-edit.html
+++ b/friday/demo/src/main/resources/templates/user/user-edit.html
@@ -59,8 +59,10 @@
         <div class="layui-form-item">
             <label class="layui-form-label">性别</label>
             <div class="layui-input-block">
-                <input type="radio" th:value="${sysUser.sex}" name="sex" value="1" title="男" checked="">
-                <input type="radio" th:value="${sysUser.sex}" name="sex" value="0" title="女">
+<!--                <input type="radio" th:value="${sysUser.sex}" name="sex" value="1" title="男" checked="">-->
+<!--                <input type="radio" th:value="${sysUser.sex}" name="sex" value="0" title="女">-->
+                <input type="radio"  th:checked="${sysUser.sex==1}" name="sex" value="1" title="男" checked="">
+                <input type="radio" th:checked="${sysUser.sex==0}" name="sex" value="0" title="女">
             </div>
         </div>
         <input type="text" id="roleId"  name="roleId" style="display:none;"/>
