角色列表和角色模糊查询

--- a/friday/demo/src/main/resources/templates/index.html
+++ b/friday/demo/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html class="x-admin-sm" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>权限管理系统-Friday</title>
+    <title>Friday-System</title>
     <header th:replace="header::html"></header>
 </head>
 <body class="index">
@@ -19,13 +19,13 @@
             <dl class="layui-nav-child">
                 <!-- 二级菜单 -->
                 <dd>
-                    <a onclick="xadmin.open('最大化','http://www.baidu.com')">
+                    <a onclick="xadmin.open('最大化','http://www.baidu.com','','',true)">
                         <i class="iconfont">&#xe6a2;</i>弹出最大化</a></dd>
                 <dd>
                     <a onclick="xadmin.open('弹出自动宽高','http://www.baidu.com')">
                         <i class="iconfont">&#xe6a8;</i>弹出自动宽高</a></dd>
                 <dd>
-                    <a onclick="xadmin.open('弹出指定宽高','http://www.baidu.com')">
+                    <a onclick="xadmin.open('弹出指定宽高','http://www.baidu.com',500,300)">
                         <i class="iconfont">&#xe6a8;</i>弹出指定宽高</a></dd>
                 <dd>
                     <a onclick="xadmin.add_tab('在tab打开','member-list.html')">
@@ -62,13 +62,13 @@
             <li>
                 <a href="javascript:;">
                     <i class="iconfont left-nav-li" lay-tips="会员管理">&#xe6b8;</i>
-                    <cite>会员管理</cite>
+                    <cite>系统设置</cite>
                     <i class="iconfont nav_right">&#xe697;</i></a>
                 <ul class="sub-menu">
                     <li>
-                        <a onclick="xadmin.add_tab('统计页面','welcome1.html')">
+                        <a onclick="xadmin.add_tab('角色列表','/api/getPage?pageName=role/role-list')">
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>统计页面</cite></a>
+                            <cite>角色列表</cite></a>
                     </li>
                     <li>
                         <a onclick="xadmin.add_tab('会员列表(静态表格)','member-list.html')">
