用户模糊查询bug

--- a/friday/demo/src/main/resources/templates/user/user-list.html
+++ b/friday/demo/src/main/resources/templates/user/user-list.html
@@ -110,6 +110,7 @@
 
         //监听提交
         form.on('submit(search)', function(data){
+            console.log("搜索");
             var username = data.field.username;
             table.render({
                 elem: '#table'
