--- a/friday/demo/src/main/resources/templates/user/user-list.html
+++ b/friday/demo/src/main/resources/templates/user/user-list.html
@@ -60,6 +60,7 @@
             elem: '#table'
             ,url: '/user/list' //数据接口
             ,page: true //开启分页
+            ,limits: [5,10,20,30,40,50,60,70,80,90] // 自定义分页数量显示
             ,response: {
                 countName: 'count', //规定数据总数的字段名称，默认：count
                 dataName: 'datas' //规定数据列表的字段名称，默认：data
@@ -103,7 +104,7 @@
 
                 });
             } else if(obj.event === 'edit'){
-                xadmin.open('编辑用户信息','/user/edit/?id='+data.id);
+                xadmin.open('编辑用户信息', '/user/edit/?id=' + data.id);
             }
         });
 
