--- a/friday/05_friday-安全控制/friday/src/main/resources/templates/index.html
+++ b/friday/05_friday-安全控制/friday/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <body class="index">
 <!-- 顶部开始 -->
 <div class="container">
-    <div class="logo"> <a href="index.html">X-admin v2.2</a></div>
+    <div class="logo"> <a href="index.html">权限管理系统</a></div>
     <div class="left_open">  <a><i title="展开左侧栏" class="iconfont">&#xe699;</i></a> </div>
     <ul class="layui-nav left fast-add" lay-filter="">
         <li class="layui-nav-item">
@@ -66,7 +66,9 @@
     <div class="layui-tab tab" lay-filter="xbs_tab" lay-allowclose="false">
         <ul class="layui-tab-title">
             <li class="home">
-                <i class="layui-icon">&#xe68e;</i>我的桌面</li></ul>
+                <i class="layui-icon">&#xe68e;</i>我的桌面
+            </li>
+        </ul>
         <div class="layui-unselect layui-form-select layui-form-selected" id="tab_right">
             <dl>
                 <dd data-type="this">关闭当前</dd>
@@ -75,7 +77,8 @@
         </div>
         <div class="layui-tab-content">
             <div class="layui-tab-item layui-show">
-                <iframe src='/api/getPage?pageName=user/user-list' frameborder="0" scrolling="yes" class="x-iframe"></iframe>
+<!--                <iframe src='/api/getPage?pageName=user/user-list' frameborder="0" scrolling="yes" class="x-iframe"></iframe>-->
+                <iframe src='http://www.baidu.com' frameborder="0" scrolling="yes" class="x-iframe"></iframe>
             </div>
         </div>
         <div id="tab_show"></div>
@@ -94,8 +97,8 @@
 <script>
     $(document).ready(function () {
         //显示用户名
-        // var nickName = localStorage.nickName;
-        // $("#show-nickName").text((nickName != null && nickName != undefined) ? nickName : "---");
+        var nickName = localStorage.nickName;
+        $("#show-nickName").text((nickName != null && nickName != undefined) ? nickName : "---");
 
         function Menu(eleId, userId) {
             this.eleId = eleId || "nav";
@@ -214,8 +217,8 @@
             }
 
         }
-        // var userId = localStorage.userId;
-        var menu = new Menu("",1);
+        var userId = localStorage.userId;
+        var menu = new Menu("",userId );
         menu.init();
     })
     ;
