--- a/friday/06_friday-基础功能/friday/src/main/resources/templates/index.html
+++ b/friday/06_friday-基础功能/friday/src/main/resources/templates/index.html
@@ -78,7 +78,7 @@
         <div class="layui-tab-content">
             <div class="layui-tab-item layui-show">
 <!--                <iframe src='/api/getPage?pageName=user/user-list' frameborder="0" scrolling="yes" class="x-iframe"></iframe>-->
-                <iframe src='http://www.baidu.com' frameborder="0" scrolling="yes" class="x-iframe"></iframe>
+                <iframe src='' frameborder="0" scrolling="yes" class="x-iframe"></iframe>
             </div>
         </div>
         <div id="tab_show"></div>
